# shitsuji-bot

./: .gitignore  heart.py  main.py  pyproject.toml  requirements.txt  settings.py
functions/: basics.py
functions/third_apps/: errors.py  google_sheet_API.py  recipeapi.py
managers/: google_sheet_manager.py
