[tool.poetry]
name = "repl_nix_shitsuji-bot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
gspread = "^5.5.0"
oauth2client = "^4.1.3"
pandas = "^1.5.0"
requests = "^2.28.1"
Flask = "^2.2.2"
telegram = "^0.0.1"
python-telegram-bot = "^13.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
